kuma-project/kuma-project-gateway/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  namespace: blog
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/router.priority: "100"
spec:
  tls:
    - hosts:
        - blog.kumacloud.top
  rules:
    - host: blog.kumacloud.top
      http:
        paths:
          - path: /blog
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 18080
          - path: /uaa
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 18080
